@@ -1,5 +1,7 @@
 == master
 
+* Make it easier to override generated instance / class methods
+
 == 0.6.1 / 2009-03-07
 
 * Add i18n support for ActiveRecord validation errors
